Allow objective-c xctest files when generating xcode project.

Bug: 798687
Change-Id: Idfa075e10f121fd6a7e09ee56f628610f2332ec7
Reviewed-on: https://chromium-review.googlesource.com/848834
Commit-Queue: Peter Hanspers <peterhanspers@chromium.org>
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Reviewed-by: Yuke Liao <liaoyuke@chromium.org>
Reviewed-by: Dirk Pranke <dpranke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526946}
Former-commit-id: af32cb03c8daf3696b972cae2c6791bdd6e05bb2