tools/gn/xcode_writer.cc
@@ -36,7 +36,8 @@ using TargetToTarget = std::unordered_map<const Target*, const Target*>;
 using TargetToPBXTarget = std::unordered_map<const Target*, PBXTarget*>;
 
 const char kEarlGreyFileNameIdentifier[] = "egtest.mm";
-const char kXCTestFileNameIdentifier[] = "xctest.mm";
+const char kXCTestObjCFileNameIdentifier[] = "xctest.m";
+const char kXCTestObjCppFileNameIdentifier[] = "xctest.mm";
 const char kXCTestModuleTargetNamePostfix[] = "_module";
 const char kXCUITestRunnerTargetNamePostfix[] = "_runner";
 
@@ -127,7 +128,9 @@ bool IsXCUITestModuleTarget(const Target* target) {
 bool IsXCTestFile(const SourceFile& file) {
   return base::EndsWith(file.GetName(), kEarlGreyFileNameIdentifier,
                         base::CompareCase::SENSITIVE) ||
-         base::EndsWith(file.GetName(), kXCTestFileNameIdentifier,
+         base::EndsWith(file.GetName(), kXCTestObjCFileNameIdentifier,
+                        base::CompareCase::SENSITIVE) ||
+         base::EndsWith(file.GetName(), kXCTestObjCppFileNameIdentifier,
                         base::CompareCase::SENSITIVE);
 }
 
